--- a/logout.html
+++ b/logout.html
@@ -82,6 +82,74 @@
     <div class="thumbnail-header">
         <div class="thumbnail">
             <div class="thumbnail-img">
+            <img src="img/pic13.jpeg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Mother Swift</h4>
+                <p>Taylor Swift</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 400
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 750
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
+            <img src="img/pic14.jpg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Seven</h4>
+                <p>BTS</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 600
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 650
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
+            <img src="img/pic15.jpg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Joker</h4>
+                <p>Pixel</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 430
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 740
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
+            <img src="img/pic16.jpg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Trio Bear</h4>
+                <p>Bears</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 220 
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 620
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
             <img src="img/pic1.jpg" alt="">
             </div>
             <div class="thumbnail-info">
