--- a/index.html
+++ b/index.html
@@ -284,8 +284,76 @@
                 </div>
             </div>
         </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
+            <img src="img/pic13.jpeg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Mother Swift</h4>
+                <p>Taylor Swift</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 400
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 750
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
+            <img src="img/pic14.jpg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Seven</h4>
+                <p>BTS</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 600
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 650
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
+            <img src="img/pic15.jpg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Joker</h4>
+                <p>Pixel</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 430
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 740
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img">
+            <img src="img/pic16.jpg" alt="">
+            </div>
+            <div class="thumbnail-info">
+                <h4>Trio Bear</h4>
+                <p>Bears</p>
+                <div class="stats">
+                    <div class="likes">
+                        <i class="fa fa-thumbs-up"></i> 220 
+                    </div>
+                    <div class="views">
+                        <i class="fa fa-eye"></i> 620
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- Popup Modal -->
+    <!--Pop up function-->
     <div id="popup-modal" class="popup-modal">
         <span class="close-btn">&times;</span>
         <img class="popup-modal-content" id="popup-img">
@@ -293,5 +361,4 @@
     <script src="./script.js"></script>
     
 </body>
-
 </html>
