--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behance Boop</title>
+    <link rel="icon" type="image/svg+xml" href="img/behance.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -44,7 +45,7 @@
                         <li><span href="#" class="line">Behance <span class="line pro-button">PRO</span></span></li>
                         <!--<div class="pro-button">PRO</div> -->
 
-                        <li><a href="#" class="line">Hire Freelancers</a></li>
+                        <li><a href="#" class="line">Hire Freelancers</a> <i class='fa fa-chevron-down' style='font-size:15px'></i></li>
                     </ul>
                 </div>
                 <div class="navbar-right">
@@ -65,7 +66,8 @@
         </div>
         <div class="search-bar">
             <i class="fa fa-search"></i>
-            <input type="text" placeholder="Search the creative world at work" class="search-value" id="searchInput"> <button class="search-by-image"><i class="fa fa-image"></i> Search by Image</button>
+            <input type="text" placeholder="Search the creative world at work" class="search-value" id="searchInput"> 
+            <button class="search-by-image" id="searchByImage"> <i class="fa fa-image"></i> Search by Image</button>
         </div>
         <div id="suggestions" class="result-box">
         </div>
