--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in Page</title>
+    <link rel="icon" type="image/svg+xml" href="img/behance.svg">
 </head>
 <body>
     <div class="container">
@@ -108,6 +109,7 @@
     }
 </style>
 <script>
+    // For Log in
     function validate(){
         var password = document.getElementById("pass");
         var mail = document.getElementById("email");
