Updated Log in and CSS

--- a/logout.html
+++ b/logout.html
@@ -45,11 +45,11 @@
                         <li><span href="#" class="line">Behance <span class="line pro-button">PRO</span></span></li>
                         <!--<div class="pro-button">PRO</div> -->
 
-                        <li><a href="#" class="line">Hire Freelancers</a></li>
+                        <li><a href="#" class="line">Hire Freelancers</a> <i class='fa fa-chevron-down' style='font-size:15px'></i></li>
                     </ul>
                 </div>
                 <div class="navbar-right">
-                    <i style="font-size:16px" class="fa">&#xf0f3;</i>
+                    <i style="font-size:16px; margin-right: 10px;;" class="fa">&#xf0f3;</i>
                     <button class="sharebutton">Share Your Work</button>
                     <button class="logout" onclick="outputclick()">Log Out</button>
                     <script src="./script.js"></script>
@@ -66,7 +66,8 @@
         </div>
         <div class="search-bar">
             <i class="fa fa-search"></i>
-            <input type="text" placeholder="Search the creative world at work" class="search-value" id="searchInput"> <button class="search-by-image"><i class="fa fa-image"></i> Search by Image</button>
+            <input type="text" placeholder="Search the creative world at work" class="search-value" id="searchInput"> 
+            <button class="search-by-image" id="searchByImage"><i class="fa fa-image"></i> Search by Image</button>
         </div>
         <div id="suggestions" class="result-box">
         </div>
